--- a/themes/landing-page-hugo/layouts/partials/head.html
+++ b/themes/landing-page-hugo/layouts/partials/head.html
@@ -35,5 +35,9 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Netlify's idendity widget to set up the CMS -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+
 </head>
 <body>
