--- a/themes/landing-page-hugo/layouts/partials/footer.html
+++ b/themes/landing-page-hugo/layouts/partials/footer.html
@@ -39,5 +39,18 @@
     </div>
 </footer>
 {{ partial "js.html" . }}
+
+<!-- Finaly part of Netlify's CMS Identity widget -->
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 </body>
 </html>
