Reverted a change made from the CMS

--- a/themes/landing-page-hugo/layouts/partials/footer.html
+++ b/themes/landing-page-hugo/layouts/partials/footer.html
@@ -40,7 +40,7 @@
 </footer>
 {{ partial "js.html" . }}
 
-<!-- Finaly part of Netlify's CMS Identity widget -->
+<!-- Final part of Netlify's CMS Identity widget -->
 <script>
   if (window.netlifyIdentity) {
     window.netlifyIdentity.on("init", user => {
