Add Netlify Identity to the header

--- a/themes/landing-page-hugo/layouts/partials/header.html
+++ b/themes/landing-page-hugo/layouts/partials/header.html
@@ -29,6 +29,10 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                <li>
+                    <a data-netlify-identity-button></a>
+                </li>
+
                 {{ end }}
             </ul>
         </div>
